Avoid scrolling issues when used in iframe on iOS.

--- a/dashboard/raneto/public/styles/workshop.css
+++ b/dashboard/raneto/public/styles/workshop.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 body {
     font-size: 1.5em;
 }
